# apex-inference-service

./: .gitignore  README.md  docker-compose.yaml  load_test.py  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  deploy-canary.yml
deploy/docker/: .dockerignore  Dockerfile  prometheus.yml
deploy/k8s/: canary_script.py
deploy/k8s/helm/inference-service/: Chart.yaml  values.yaml
deploy/k8s/helm/inference-service/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/: canary_validation_integration.md  cost_tracking_integration.md  drift_detection_integration.md
examples/: canary_validation_cicd.py  cost_tracking_example.py  drift_detection_example.py
src/app/: main.py
src/app/api/: __init__.py  health.py
src/app/api/v1/: endpoints.py
src/app/core/: circuit_breaker.py  config.py  limiter.py  logging.py  middleware.py
src/app/deployment/: __init__.py  canary_analyzer.py  rollback_policy.py
src/app/models/: schemas.py
src/app/monitoring/: __init__.py  cost_tracker.py  metrics.py  tracing.py
src/app/services/: base.py  model_wrapper.py
src/training/: train.py
tests/: conftest.py
tests/deployment/: __init__.py  test_canary_validation.py
tests/monitoring/: __init__.py  test_cost_tracker.py
tests/unit/: test_api.py
